Finished listing orgs, viewing org, approving and rejecting orgs

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -37,7 +37,7 @@
 					<td><a href="mailto:{{org[12]}}">{{org[12]}}</a></td>
 					<td>{{org[10]}}</td>
 					<td><a href="/org/{{org[1]}}">View</a></td>
-					<td class="text-center"><a class="btn btn-success text-white m-1">✓</a><a class="btn btn-danger text-white m-1">✗</a></td>
+					<td class="text-center"><a class="btn btn-success text-white m-1" href="/admin/approve/{{org[1]}}">✓</a><a class="btn btn-danger text-white m-1" href="/admin/reject/{{org[1]}}">✗</a></td>
 				</tbody>
 				{% endfor -%}
 			</table>
