--- a/templates/orgs.html
+++ b/templates/orgs.html
@@ -41,45 +41,23 @@
 	</div>
 </div>
 <div class="container pt-5 mb-5">
+	{% for org in orgData | batch(3, '&nbsp;') %}
 	<div class="row align-items-center justify-content-center">
 		<div class="card-deck padded-top">
-			<div class="card border-dark mb-3 text-center org-cards">
-				<img class="card-img-top img-size"
-					src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Flag_of_the_Red_Crescent.svg/800px-Flag_of_the_Red_Crescent.svg.png">
-					<hr />
-				<div class="card-body">
-					<h5 class="card-title">UAE Red Crescent</h5>
-					<a class="btn btn-primary mt-3" href="/viewOrg">View Profile</a>
-				</div>
-				<div class="card-footer">
-					<p class="card-text"><small class="text-muted">Member since June, 2019</small></p>
-				</div>
-			</div>
-			<div class="card border-dark mb-3 text-center org-cards">
-				<img class="card-img-top img-size" src="https://www.globalgiving.org/share/dfltpict.jpg?t=1425052995000">
+		{% for org in orgData %}
+		<div class="card border-dark mb-3 text-center org-cards">
+			<img class="card-img-top img-size"
+				src="data:image/jpeg;base64, {{org[11].decode('utf-8') | safe}}">
 				<hr />
-				<div class="card-body">
-					<h5 class="card-title">Global Giving</h5>
-					<a class="btn btn-primary mt-3" href="#">View Profile</a>
-				</div>
-				<div class="card-footer">
-					<p class="card-text"><small class="text-muted">Member since June, 2019</small></p>
-				</div>
-			</div>
-			<div class="card border-dark mb-3 text-center org-cards">
-				<img class="card-img-top img-size"
-					src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ18h1_UAcJl5YUl3rjgQmLby7gV8Hl3joTEg&usqp=CAU">
-					<hr />
-				<div class="card-body">
-					<h5 class="card-title">Charities Aid Foundation</h5>
-					<a class="btn btn-primary mt-3" href="#">View Profile</a>
-				</div>
-				<div class="card-footer">
-					<p class="card-text"><small class="text-muted">Member since June, 2019</small></p>
-				</div>
+			<div class="card-body">
+				<h5 class="card-title">{{org[2]}}</h5>
+				<a class="btn btn-primary mt-3" href="/org/{{org[1]}}">View Profile</a>
 			</div>
 		</div>
+		{% endfor %}
+		</div>
 	</div>
+	{% endfor %}
 </div>
 </div>
 {% endblock %}
