--- a/templates/addItem.html
+++ b/templates/addItem.html
@@ -47,31 +47,18 @@
                     <!--Category of Item-->
                     <div class="col-md-3 mb-3">
                         <label for="validationTooltip02">Category</label>
-                        <select class="custom-select" id="validationTooltip02" name="category" required> 
+                        <select class="custom-select" id="validationTooltip02" name="category" required>
                             <option selected disabled value="">Choose...</option>
                             <option>Books</option>
                             <option>Clothes</option>
                             <option>Toys</option>
                             <option>Linens</option>
-                            <option>Other</option>
                         </select>
-                        <script>
-                            $(document).ready(function () {
-                                $('#specify').hide();
-                                $('#validationTooltip02').on('change', function () {
-                                    if (this.value === 'Other') {
-                                        $('#specify').show();
-                                    } else {
-                                        $('#specify').hide();
-                                    }
-                                });
-                            });
-                        </script>
                         <div class="invalid-tooltip">Please select a valid category.</div>
                     </div>
                     <div class="col-md-3 mb-3">
                         <label for="validationTooltip03">Condition</label>
-                        <select class="custom-select" id="validationTooltip03" required name = 'condition'> 
+                        <select class="custom-select" id="validationTooltip03" required name="condition">
                             <option selected disabled value="">Choose...</option>
                             <option>Heavily used</option>
                             <option>Lightly used</option>
@@ -79,14 +66,6 @@
                         </select>
                         <div class="invalid-tooltip">Please select a valid condition.</div>
                     </div>
-                </div>
-                <!--IF USER CHOOSES OTHER, ASK HIM/HER TO SPECIFY-->
-                <!--TODO: Hide this from the user unless they choose "Other"-->
-                <div class="form-group" id="specify">
-                    <label for="validationTooltip04">Specify:</label>
-                    <input type="text" class="form-control" id="validationTooltip04" name="category"
-                        placeholder="What is your item's category?" required>
-                    <div class="valid-tooltip">Looks good!</div>
                 </div>
                 <!--Item Description-->
                 <div class="form-group">
@@ -108,9 +87,9 @@
                     <div class="col-md-8 mb-3">
                         <label for="validationTooltip07">Name of Organization</label>
                         <select class="custom-select" id="validationTooltip07" required name = "organization">
-                            {%for i in range(0, total_orgs)%} 
-                                <option value = "{{orgs_details[0]}}">{{orgs_details[1]}}</option> 
-                            {%endfor%}
+                            {% for org in orgs_details %}
+                                <option value="{{org[1]}}">{{org[2]}}</option>
+                            {% endfor %}
                         </select>
                         <div class="invalid-tooltip">Please select a valid organization.</div>
                     </div>
@@ -140,7 +119,7 @@
                 <p><em>Note: Your chosen organization will get notified of your donation. They may either accept or
                     reject it. Please monitor your dashboard for any updates.</em></p>
                 <button type="submit" class="btn btn-primary">Submit</button>
-            </form> 
+            </form>
         </div>
     </div>
 </div>
