--- a/templates/orgProfile.html
+++ b/templates/orgProfile.html
@@ -1,6 +1,21 @@
 {% extends 'base.html' %}
 {% block title %}Organization Profile{% endblock %}
 
+{% block navbar %}
+    <li class="nav-item">
+        <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
+    </li>
+    <li class="nav-item active">
+        <a class="nav-link" href="/dashboard"><i class="fas fa-book-open"></i> Dashboard</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/orgProfile"><i class="far fa-user"></i> My Profile</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/items"><i class="fas fa-store"></i> My Items</a>
+    </li>
+{% endblock %}
+
 {% block content %}
 <div class="jumbotron jumbotron-fluid bgColorSchemeRed colorSchemeWhite">
 	<div class="container">
