org navbvar + orgprofile

--- a/templates/orgDashboard.html
+++ b/templates/orgDashboard.html
@@ -21,7 +21,7 @@
 <div class="jumbotron jumbotron-fluid colorSchemeDarkBlue bgColorSchemePink">
     <div class="container">
         <h2 class="display-1">Dashboard</h2>
-        <p class="lead" id=intro>Hello, {{userData[2]}}!</p>
+        <p class="lead" id=intro>Hello, {{orgData[2]}}!</p>
     </div>
 </div>
 <div class="container pb-5 center-block">
