--- a/templates/orgs.html
+++ b/templates/orgs.html
@@ -7,7 +7,7 @@
 	<a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
 </li>
 <li class="nav-item">
-	<a class="nav-link" href="/userDashboard"><i class="fas fa-book-open"></i> Dashboard</a>
+	<a class="nav-link" href="/dashboard"><i class="fas fa-book-open"></i> Dashboard</a>
 </li>
 <li class="nav-item">
 	<a class="nav-link" href="/userProfile"><i class="far fa-user"></i> My Profile</a>
