--- a/templates/viewUser.html
+++ b/templates/viewUser.html
@@ -10,7 +10,7 @@
 </div>
 <div class="container pb-5 center-block">
     <div class="card mb-3 bg-light">
-        <h3 class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">Elon Musk</h3>
+        <h3 class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">{{userData[2]}} {{userData[3]}}</h3>
         <div class="card-body">
             <h5 class="text-muted text-left">User Information</h5>
             <hr />
