--- a/templates/orgs.html
+++ b/templates/orgs.html
@@ -40,11 +40,11 @@
         <p class="lead" id=intro>Organizations you can donate to.</p>
 	</div>
 </div>
-<div class="container pt-5 mb-5">
-	{% for org in orgData | batch(3, '&nbsp;') %}
+<div class="container pt-5 pb-5 mb-5">
+	{% for orgs in orgData | batch(3) %}
 	<div class="row align-items-center justify-content-center">
 		<div class="card-deck padded-top">
-		{% for org in orgData %}
+		{% for org in orgs %}
 		<div class="card border-dark mb-3 text-center org-cards">
 			<img class="card-img-top img-size"
 				src="data:image/jpeg;base64, {{org[11].decode('utf-8') | safe}}">
@@ -57,7 +57,7 @@
 		{% endfor %}
 		</div>
 	</div>
-	{% endfor %}
+	{%- endfor %}
 </div>
 </div>
 {% endblock %}
