--- a/templates/viewOrg.html
+++ b/templates/viewOrg.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}View Organization{% endblock %}
 
+<!-- TODO: Add the organiation navbar -->
 {% block content %}
 <div class="jumbotron jumbotron-fluid bgColorSchemeRed colorSchemeWhite">
 	<div class="container">
