Added confirm password function in DataHandler

--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -124,12 +124,12 @@
                     <!--Password-->
                     <div class="col-md-6 mb-3">
                         <label for="validationTooltip07">Password</label>
-                        <input type="password" class="form-control" id="validationTooltip07" required>
+                        <input type="password" class="form-control" id="validationTooltip07" name="password" required>
                     </div>
                     <!--Confrim Password-->
                     <div class="col-md-6 mb-3">
                         <label for="validationTooltip08">Confirm Password</label>
-                        <input type="password" class="form-control" id="validationTooltip08" required>
+                        <input type="password" class="form-control" id="validationTooltip08" name="confirmPassword"required>
                     </div>
                 </div>
             </div>
