--- a/templates/orgProfile.html
+++ b/templates/orgProfile.html
@@ -2,42 +2,43 @@
 {% block title %}Organization Profile{% endblock %}
 
 {% block navbar %}
-    <li class="nav-item">
-        <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
-    </li>
-    <li class="nav-item active">
-        <a class="nav-link" href="/dashboard"><i class="fas fa-book-open"></i> Dashboard</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/orgProfile"><i class="far fa-user"></i> My Profile</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/items"><i class="fas fa-store"></i> My Items</a>
-    </li>
+<li class="nav-item">
+    <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
+</li>
+<li class="nav-item active">
+    <a class="nav-link" href="/dashboard"><i class="fas fa-book-open"></i> Dashboard</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/orgProfile"><i class="far fa-user"></i> My Profile</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/items"><i class="fas fa-store"></i> My Items</a>
+</li>
 {% endblock %}
 
 {% block content %}
 <div class="jumbotron jumbotron-fluid bgColorSchemeRed colorSchemeWhite">
-	<div class="container">
-		<h2 class="display-1">Hello, {{orgData[2]}}!</h2>
+    <div class="container">
+        <h2 class="display-1">Hello, {{orgData[2]}}!</h2>
         <p class="lead" id=intro>This is your information. It is what donors see when they view your information.</p>
-	</div>
+    </div>
 </div>
 <div class="container pb-5 center-block">
     <div class="card mb-3 bg-light">
-        <h3 class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">Organization Profile</h3>
+        <h3 class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">Organization
+            Profile</h3>
         <div class="card-body">
             <h5 class="text-muted text-left pt-3">Organization Information</h5>
             <hr />
             <div class="row">
                 <!--Organization Name-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">Registered Organization Name</label>
+                    <label class="font-weight-bold text-muted">Registered Organization Name</label>
                     <p>{{orgData[2]}}</p>
                 </div>
                 <!--License Number-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">Government Issued Chairty Registration Number</label>
+                    <label class="font-weight-bold text-muted">Government Issued Chairty Registration Number</label>
                     <p>{{orgData[4]}}</p>
                 </div>
 
@@ -58,24 +59,24 @@
             <div class="row">
                 <!--City-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">City</label>
+                    <label class="font-weight-bold text-muted">City</label>
                     <p>{{orgData[5]}}</p>
                 </div>
                 <!--Emirate-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">Emirate</label>
+                    <label class="font-weight-bold text-muted">Emirate</label>
                     <p>{{orgData[6]}}</p>
                 </div>
                 <!--PO BOX-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">PO BOX</label>
+                    <label class="font-weight-bold text-muted">PO BOX</label>
                     <p>{{orgData[7]}}</p>
                 </div>
             </div>
             <!--Address Line 1-->
             <div class="row">
                 <div class="col-md-3">
-                    <label class ="font-weight-bold text-muted">Address #1</label>
+                    <label class="font-weight-bold text-muted">Address #1</label>
                 </div>
                 <div class="col-md-9">
                     <p>{{orgData[8]}}</p>
@@ -84,7 +85,7 @@
             <!--Address Line 2-->
             <div class="row">
                 <div class="col-md-3">
-                    <label class ="font-weight-bold text-muted">Address #2</label>
+                    <label class="font-weight-bold text-muted">Address #2</label>
                 </div>
                 <div class="col-md-9">
                     <p>{{orgData[9]}}</p>
@@ -92,7 +93,8 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-right">
-                    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#changePassword">Change Password</a>
+                    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#changePassword">Change
+                        Password</a>
                 </div>
             </div>
         </div>
@@ -110,24 +112,28 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="form-row">
-                    <!--Password-->
-                    <div class="col-md-6 mb-3">
-                        <label for="validationTooltip07">Password</label>
-                        <input type="password" class="form-control" id="validationTooltip07" required>
+                <form method="POST" action="/changePassword">
+                    <div class="form-row">
+                        <!--Password-->
+                        <div class="col-md-6 mb-3">
+                            <label for="validationTooltip07">Password</label>
+                            <input type="password" class="form-control" id="validationTooltip07" name="password"
+                                required>
+                        </div>
+                        <!--Confrim Password-->
+                        <div class="col-md-6 mb-3">
+                            <label for="validationTooltip08">Confirm Password</label>
+                            <input type="password" class="form-control" id="validationTooltip08" name="confirmPassword"
+                                required>
+                        </div>
                     </div>
-                    <!--Confrim Password-->
-                    <div class="col-md-6 mb-3">
-                        <label for="validationTooltip08">Confirm Password</label>
-                        <input type="password" class="form-control" id="validationTooltip08" required>
-                    </div>
-                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
             </div>
         </div>
+    </form>
     </div>
 </div>
 {% endblock %}
