--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -24,10 +24,10 @@
 
 {% block content %}
 <div class="jumbotron jumbotron-fluid bgColorSchemeBrown">
-	<div class="container">
-		<h2 class="display-1">Hello, {{userData[2]}}!</h2>
+    <div class="container">
+        <h2 class="display-1">Hello, {{userData[2]}}!</h2>
         <p class="lead" id=intro>This is your profile page. Organizations can view this page.</p>
-	</div>
+    </div>
 </div>
 <div class="container pb-5 center-block">
     <div class="card mb-3 bg-light">
@@ -38,17 +38,17 @@
             <div class="row">
                 <!--First Name-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">First Name</label>
+                    <label class="font-weight-bold text-muted">First Name</label>
                     <p>{{userData[2]}}</p>
                 </div>
                 <!--Last Name-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">Last Name</label>
+                    <label class="font-weight-bold text-muted">Last Name</label>
                     <p>{{userData[3]}}</p>
                 </div>
                 <!--Birthdate-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">Date of Birth</label>
+                    <label class="font-weight-bold text-muted">Date of Birth</label>
                     <p>{{userData[4]}}</p>
                 </div>
             </div>
@@ -68,24 +68,24 @@
             <div class="row">
                 <!--City-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">City</label>
+                    <label class="font-weight-bold text-muted">City</label>
                     <p>{{userData[5]}}</p>
                 </div>
                 <!--Emirate-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">Emirate</label>
+                    <label class="font-weight-bold text-muted">Emirate</label>
                     <p>{{userData[6]}}</p>
                 </div>
                 <!--PO BOX-->
                 <div class="col">
-                    <label class ="font-weight-bold text-muted">PO BOX</label>
+                    <label class="font-weight-bold text-muted">PO BOX</label>
                     <p>{{userData[7]}}</p>
                 </div>
             </div>
             <!--Address Line 1-->
             <div class="row">
                 <div class="col-md-3">
-                    <label class ="font-weight-bold text-muted">Address #1</label>
+                    <label class="font-weight-bold text-muted">Address #1</label>
                 </div>
                 <div class="col-md-9">
                     <p>{{userData[8]}}</p>
@@ -94,7 +94,7 @@
             <!--Address Line 1-->
             <div class="row">
                 <div class="col-md-3">
-                    <label class ="font-weight-bold text-muted">Address #2</label>
+                    <label class="font-weight-bold text-muted">Address #2</label>
                 </div>
                 <div class="col-md-9">
                     <p>{{userData[9]}}</p>
@@ -103,12 +103,14 @@
             <div class="row">
                 <div class="col-md-12 text-right">
                     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#edit">Edit Profile</a>
-                    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#changePassword">Change Password</a>
+                    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#changePassword">Change
+                        Password</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 <!-- Change Password Modal -->
 <div class="modal fade" id="changePassword" tabindex="-1" aria-labelledby="changePassword" aria-hidden="true">
     <div class="modal-dialog">
@@ -120,24 +122,26 @@
                 </button>
             </div>
             <div class="modal-body">
+            <form method="POST" action="/changePassword">
                 <div class="form-row">
-                    <!--Password-->
-                    <div class="col-md-6 mb-3">
-                        <label for="validationTooltip07">Password</label>
-                        <input type="password" class="form-control" id="validationTooltip07" name="password" required>
-                    </div>
-                    <!--Confrim Password-->
-                    <div class="col-md-6 mb-3">
-                        <label for="validationTooltip08">Confirm Password</label>
-                        <input type="password" class="form-control" id="validationTooltip08" name="confirmPassword"required>
-                    </div>
+                        <!--Password-->
+                        <div class="col-md-6 mb-3">
+                            <label for="validationTooltip07">Password</label>
+                            <input type="password" class="form-control" id="validationTooltip07" name="password" required>
+                        </div>
+                        <!--Confirm Password-->
+                        <div class="col-md-6 mb-3">
+                            <label for="validationTooltip08">Confirm Password</label>
+                            <input type="password" class="form-control" id="validationTooltip08" name="confirmPassword" required>
+                        </div>
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
             </div>
         </div>
+    </form>
     </div>
 </div>
 
@@ -152,88 +156,64 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="form">
-                    <p class="text-center font-weight-bold">User Information</p>
-                    <hr />
-                    <div class="form-row">
-                        <!-- First Name -->
-                        <div class="col-md-6 mb-3">
-                            <label for="validationTooltip01" name="firstName">First name</label>
-                            <input type="text" class="form-control" id="validationTooltip01" value="Elon" required>
-                            <div class="valid-tooltip">Looks good!</div>
+                <form method="POST" action="/editInfo">
+                    <div class="form">
+                        <!-- Address -->
+                        <p class="text-center font-weight-bold">Contact Information</p>
+                        <hr />
+                        <div class="form-row">
+                            <!-- City -->
+                            <div class="col-md-4 mb-3">
+                                <label for="validationTooltip03">City</label>
+                                <input type="text" class="form-control" id="validationTooltip03" value="{{userData[5]}}"
+                                    name="city" required>
+                                <div class="invalid-tooltip">Please provide a valid city.</div>
+                            </div>
+                            <!--Emirate Drop-Down-->
+                            <div class="col-md-4 mb-3">
+                                <label for="validationTooltip04">Emirate</label>
+                                <select class="custom-select" id="validationTooltip04" name="emirate" required>
+                                    <option selected disabled value="">Choose...</option>
+                                    <option>Abu Dhabi</option>
+                                    <option>Dubai</option>
+                                    <option>Sharjah</option>
+                                    <option>Ajman</option>
+                                    <option>Fujairah</option>
+                                    <option>Ras al Khaimah</option>
+                                    <option>Umm al Quwain</option>
+                                </select>
+                                <div class="invalid-tooltip">Please select a valid Emirate.</div>
+                            </div>
+                            <!--PO BOX-->
+                            <div class="col-md-4 mb-3">
+                                <label for="PO-BOX">PO Box</label>
+                                <input type="text" class="form-control" id="PO-BOX" value="{{userData[7]}}" name="POBox">
+                            </div>
                         </div>
-                        <!-- Last Name -->
-                        <div class="col-md-6 mb-3">
-                            <label for="validationTooltip02" name="lastName">Last name</label>
-                            <input type="text" class="form-control" id="validationTooltip02" value="Musk" required>
-                            <div class="valid-tooltip">Looks good!</div>
+                        <!--2 complete address lines-->
+                        <div class="form-group">
+                            <label for="Address1">Address #1</label>
+                            <input type="text" class="form-control" value="{{userData[8]}}"
+                                name="address1" required>
                         </div>
-        
-                    </div>
-                    <!--Birth date-->
-                    <div class="form-group">
-                        <label for="Birthdate">Date of Birth</label>
-                        <input type="date" class="form-control" id="exampleFormControlInput1" name="dob">
-                    </div>
-                    <!-- Address -->
-                    <p class="text-center font-weight-bold">Contact Information</p>
-                    <hr />
-                    <div class="form-row">
-                        <!-- City -->
-                        <div class="col-md-4 mb-3">
-                            <label for="validationTooltip03">City</label>
-                            <input type="text" class="form-control" id="validationTooltip03" value="Downtown Dubai" name="city" required>
-                            <div class="invalid-tooltip">Please provide a valid city.</div>
+                        <div class="form-group">
+                            <label for="Address2">Address #2</label>
+                            <input type="text" class="form-control" value="{{userData[9]}}" name="address2" required>
                         </div>
-                        <!--Emirate Drop-Down-->
-                        <div class="col-md-4 mb-3">
-                            <label for="validationTooltip04">Emirate</label>
-                            <select class="custom-select" id="validationTooltip04" name="emirate" required>
-                                <option selected disabled value="">Choose...</option>
-                                <option>Abu Dhabi</option>
-                                <option>Dubai</option>
-                                <option>Sharjah</option>
-                                <option>Ajman</option>
-                                <option>Fujairah</option>
-                                <option>Ras al Khaimah</option>
-                                <option>Umm al Quwain</option>
-                            </select>
-                            <div class="invalid-tooltip">Please select a valid Emirate.</div>
-                        </div>
-        
-                        <!--PO BOX-->
-                        <div class="col-md-4 mb-3">
-                            <label for="PO-BOX">PO Box</label>
-                            <input type="text" class="form-control" id="PO-BOX" value="12345" name="POBox">
+                        <!-- Phone number -->
+                        <div class="form-group">
+                            <label for="validationTooltip05">Phone Number</label>
+                            <input type="tel" class="form-control" id="validationTooltip05" value="{{userData[10]}}"
+                                name="phone" required>
                         </div>
                     </div>
-                    <!--2 complete address lines-->
-                    <div class="form-group">
-                        <label for="Address1">Address #1</label>
-                        <input type="text" class="form-control" value="1 Sheikh Mohammed bin Rashid Blvd" name="address1" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="Address2">Address #2</label>
-                        <input type="text" class="form-control" value="Burj Khalifa" name="address2" required>
-                    </div>
-        
-                    <!-- Phone number -->
-                    <div class="form-group">
-                        <label for="validationTooltip05">Phone Number</label>
-                        <input type="tel" class="form-control" id="validationTooltip05" value="059765467890865" name="phone" required>
-                    </div>
-                    <!-- Email -->
-                    <div class="form-group">
-                        <label for="validationTooltip06">Email</label>
-                        <input type="email" class="form-control" id="validationTooltip06" value="elonMuskIsBoss@tesla.com" name="email" required>
-                    </div>
-                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
             </div>
         </div>
+    </form>
     </div>
 </div>
 {% endblock %}
