--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,50 @@
 {% extends 'base.html' %}
 {% block title %}Register{% endblock %}
+{% block navbar %}
+    {% if session['type'] == 'user' %}
+        <li class="nav-item">
+            <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/dashboard"><i class="fas fa-book-open"></i> Dashboard</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/userProfile"><i class="far fa-user"></i> My Profile</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/addItem"><i class="fas fa-hand-holding-usd"></i> Donate</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/items"><i class="fas fa-store"></i> My Items</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/orgs"><i class="far fa-building"></i> Organizations</a>
+        </li>
+    {% else %}
+        <li class="nav-item">
+            <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/dashboard"><i class="fas fa-book-open"></i> Dashboard</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/orgProfile"><i class="far fa-user"></i> My Profile</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/items"><i class="fas fa-store"></i> My Items</a>
+        </li>
+    {% endif %}
+{% endblock %}
 
+<!--When the user is not logged in-->
+{% block navbar_nologin %}
+<li class="nav-item">
+	<a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
+</li>
+<li class="nav-item">
+	<a class="nav-link" href="/orgs"><i class="far fa-building"></i> Organizations</a>
+</li>
+{% endblock %}
 {% block content %}
 
 <!--Card BEGIN-->
