--- a/templates/itemsOrg.html
+++ b/templates/itemsOrg.html
@@ -9,16 +9,10 @@
 	<a class="nav-link" href="/dashboard"><i class="fas fa-book-open"></i> Dashboard</a>
 </li>
 <li class="nav-item">
-	<a class="nav-link" href="/userProfile"><i class="far fa-user"></i> My Profile</a>
-</li>
-<li class="nav-item">
-	<a class="nav-link" href="/addItem"><i class="fas fa-hand-holding-usd"></i> Donate</a>
+	<a class="nav-link" href="/orgProfile"><i class="far fa-user"></i> My Profile</a>
 </li>
 <li class="nav-item active">
 	<a class="nav-link" href="/items"><i class="fas fa-store"></i> My Items</a>
-</li>
-<li class="nav-item">
-	<a class="nav-link" href="/orgs"><i class="far fa-building"></i> Organizations</a>
 </li>
 {% endblock %}
 
